# pytorch-polynomial-cpp

./: CMakeLists.txt  main.cpp
